[package]
name = "dart"
version = "0.1.0"
authors = ["Patrik Buhring <patrikbuhring@gmail.com>"]
edition = "2018"
description = "Idiomatic bindings to the dart native extensions api"
repository = "https://github.com/OptimisticPeach/dart_rs"
readme = "readme.md"
keywords = ["dart", "native", "extension", "extensions", "idiomatic"]
categories = ["api-bindings", "development-tools::ffi", ]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
mashup = "0.1.9"
dart-sys = "2.0.1"

[dev-dependencies]
rand = "0.7.3"
lazy_static = "1.4.0"

[[example]]
name = "sync"
crate-type = ["cdylib"]

[[example]]
name = "async"
crate-type = ["cdylib"]

[[example]]
name = "sync_and_async"
crate-type = ["cdylib"]
